syntax = "proto3";

import "google/api/annotations.proto";

option csharp_namespace = "JsonServer";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply){
	  option (google.api.http) = {
		  get: "/greeter/{firstName}/{lastName}"
	  };
  };
}

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloReply {
  int32 id = 1;
  string message = 2;
}
